--- a/app/src/main/res/menu/menu_task_list.xml
+++ b/app/src/main/res/menu/menu_task_list.xml
@@ -4,7 +4,7 @@
       tools:context=".TaskListActivity">
 
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/add_task"
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="101"
         android:title="@string/add_task"
